Update: Add Chinese app name '放哪了呢' and update GitHub username to nestly-young

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Nestly - 智能物品管理应用 | 法律文档中心">
-  <title>Nestly - 法律文档中心</title>
+  <meta name="description" content="放哪了呢（Nestly） - 智能物品管理应用 | 法律文档中心">
+  <title>放哪了呢（Nestly） - 法律文档中心</title>
   <link rel="stylesheet" href="css/style.css">
   <style>
     .hero {
@@ -137,7 +137,8 @@
 </head>
 <body>
   <div class="hero">
-    <h1>📦 Nestly</h1>
+    <h1>📦 放哪了呢</h1>
+    <p class="subtitle">Nestly</p>
     <p>智能物品管理应用</p>
     <p>用AI让物品管理更简单</p>
   </div>
@@ -145,7 +146,7 @@
   <main>
     <section>
       <h2 style="text-align: center;">法律文档中心</h2>
-      <p style="text-align: center; color: #666;">欢迎访问Nestly法律文档中心。在这里您可以了解我们的隐私政策、服务条款和订阅服务详情。</p>
+      <p style="text-align: center; color: #666;">欢迎访问放哪了呢（Nestly）法律文档中心。在这里您可以了解我们的隐私政策、服务条款和订阅服务详情。</p>
 
       <div class="card-grid">
         <div class="card">
@@ -172,8 +173,8 @@
     </section>
 
     <section class="features">
-      <h2>关于 Nestly</h2>
-      <p>Nestly是一款智能物品管理应用，帮助您轻松管理和查找物品。</p>
+      <h2>关于放哪了呢（Nestly）</h2>
+      <p>放哪了呢（Nestly）是一款智能物品管理应用，帮助您轻松管理和查找物品。</p>
 
       <h3>核心功能</h3>
       <ul>
@@ -193,7 +194,7 @@
         <a href="terms-of-service.html">服务条款</a>
         <a href="subscription-terms.html">订阅条款</a>
         <a href="mailto:450861294@qq.com">联系我们</a>
-        <a href="https://github.com/welcome-young/nestly" target="_blank">GitHub</a>
+        <a href="https://github.com/nestly-young/nestly" target="_blank">GitHub</a>
       </div>
     </section>
 
@@ -201,14 +202,14 @@
       <h2>联系信息</h2>
       <ul>
         <li>📧 邮箱：<a href="mailto:450861294@qq.com">450861294@qq.com</a></li>
-        <li>👨‍💻 开发者：welcome-young</li>
-        <li>🌐 GitHub：<a href="https://github.com/welcome-young/nestly" target="_blank">welcome-young/nestly</a></li>
+        <li>👨‍💻 开发者：nestly-young</li>
+        <li>🌐 GitHub：<a href="https://github.com/nestly-young/nestly" target="_blank">nestly-young/nestly</a></li>
       </ul>
     </section>
 
     <section style="background: #E3F2FD; padding: 25px; border-radius: 12px; margin-top: 40px;">
       <h3 style="margin-top: 0; color: var(--primary-color);">iOS审核说明</h3>
-      <p>本网站托管了Nestly应用的所有法律文档，符合Apple App Store审核要求。所有文档内容真实、完整、准确。</p>
+      <p>本网站托管了放哪了呢（Nestly）应用的所有法律文档，符合Apple App Store审核要求。所有文档内容真实、完整、准确。</p>
       <ul style="margin-bottom: 0;">
         <li>✅ 真实的联系方式</li>
         <li>✅ 完整的隐私政策</li>
@@ -220,7 +221,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Nestly by welcome-young. All rights reserved.</p>
+    <p>&copy; 2025 放哪了呢（Nestly） by nestly-young. All rights reserved.</p>
     <p>
       <a href="privacy-policy.html">隐私政策</a> |
       <a href="terms-of-service.html">服务条款</a> |
