--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Nestly 隐私政策 - 了解我们如何收集、使用和保护您的个人信息">
-  <title>隐私政策 - Nestly</title>
+  <meta name="description" content="放哪了呢（Nestly）隐私政策 - 了解我们如何收集、使用和保护您的个人信息">
+  <title>隐私政策 - 放哪了呢（Nestly）</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
-    <h1>Nestly 隐私政策</h1>
+    <h1>放哪了呢（Nestly）隐私政策</h1>
     <div class="meta-info">
       <p><strong>生效日期：</strong>2025年1月1日</p>
       <p><strong>最后更新：</strong>2025年1月1日</p>
@@ -26,8 +26,9 @@
   <main>
     <section id="overview">
       <h2>概述</h2>
-      <p>Nestly（"我们"、"应用"或"服务"）致力于保护您的隐私。本隐私政策说明了我们如何收集、使用、存储和保护您在使用我们的物品管理应用时的个人信息。</p>
-      <p><strong>开发者：</strong>welcome-young（个人开发者）</p>
+      <p>放哪了呢（Nestly）（"我们"、"应用"或"服务"）致力于保护您的隐私。本隐私政策说明了我们如何收集、使用、存储和保护您在使用我们的智能物品管理应用时的个人信息。</p>
+      <p><strong>应用名称：</strong>放哪了呢（Nestly）</p>
+      <p><strong>开发者：</strong>nestly-young（个人开发者）</p>
       <p><strong>联系邮箱：</strong><a href="mailto:450861294@qq.com">450861294@qq.com</a></p>
     </section>
 
@@ -345,9 +346,9 @@
       <p>如果您对本隐私政策有任何疑问，请通过以下方式联系我们：</p>
       <ul>
         <li><strong>邮箱：</strong><a href="mailto:450861294@qq.com">450861294@qq.com</a></li>
-        <li><strong>开发者：</strong>welcome-young</li>
+        <li><strong>开发者：</strong>nestly-young</li>
         <li><strong>应用内反馈：</strong>设置 > 意见反馈</li>
-        <li><strong>GitHub：</strong><a href="https://github.com/welcome-young/nestly" target="_blank">https://github.com/welcome-young/nestly</a></li>
+        <li><strong>GitHub：</strong><a href="https://github.com/nestly-young/nestly" target="_blank">https://github.com/nestly-young/nestly</a></li>
       </ul>
     </section>
 
@@ -375,7 +376,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Nestly by welcome-young. All rights reserved.</p>
+    <p>&copy; 2025 放哪了呢（Nestly） by nestly-young. All rights reserved.</p>
     <p><a href="index.html">返回首页</a> | <a href="mailto:450861294@qq.com">联系我们</a></p>
   </footer>
 </body>
