--- a/subscription-terms.html
+++ b/subscription-terms.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Nestly 订阅服务条款 - 了解订阅计划、定价和管理方式">
-  <title>订阅服务条款 - Nestly</title>
+  <meta name="description" content="放哪了呢（Nestly）订阅服务条款 - 了解订阅计划、定价和管理方式">
+  <title>订阅服务条款 - 放哪了呢（Nestly）</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
-    <h1>Nestly 订阅服务条款</h1>
+    <h1>放哪了呢（Nestly）订阅服务条款</h1>
     <div class="meta-info">
       <p><strong>生效日期：</strong>2025年1月1日</p>
       <p><strong>最后更新：</strong>2025年1月1日</p>
@@ -26,7 +26,7 @@
   <main>
     <section id="overview">
       <h2>订阅服务概述</h2>
-      <p>Nestly提供基于订阅的高级服务，本文档详细说明订阅相关的条款和条件。</p>
+      <p>放哪了呢（Nestly）提供基于订阅的高级服务，本文档详细说明订阅相关的条款和条件。</p>
     </section>
 
     <section id="subscription-summary" class="info-box">
@@ -387,19 +387,19 @@
       <p>对订阅服务有任何疑问，请联系：</p>
       <ul>
         <li><strong>邮箱：</strong><a href="mailto:450861294@qq.com">450861294@qq.com</a></li>
-        <li><strong>开发者：</strong>welcome-young</li>
+        <li><strong>开发者：</strong>nestly-young</li>
         <li><strong>应用内反馈：</strong>设置 > 意见反馈</li>
-        <li><strong>GitHub：</strong><a href="https://github.com/welcome-young/nestly" target="_blank">https://github.com/welcome-young/nestly</a></li>
+        <li><strong>GitHub：</strong><a href="https://github.com/nestly-young/nestly" target="_blank">https://github.com/nestly-young/nestly</a></li>
       </ul>
     </section>
 
     <div class="success-box">
-      <p>感谢您订阅Nestly专业版！我们承诺为您提供优质的高级服务体验。</p>
+      <p>感谢您订阅放哪了呢（Nestly）专业版！我们承诺为您提供优质的高级服务体验。</p>
     </div>
   </main>
 
   <footer>
-    <p>&copy; 2025 Nestly by welcome-young. All rights reserved.</p>
+    <p>&copy; 2025 放哪了呢（Nestly） by nestly-young. All rights reserved.</p>
     <p><a href="index.html">返回首页</a> | <a href="mailto:450861294@qq.com">联系我们</a></p>
   </footer>
 </body>
