优化内容的描述

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
         <a href="privacy-policy.html">隐私政策</a>
         <a href="terms-of-service.html">服务条款</a>
         <a href="subscription-terms.html">订阅条款</a>
+        <a href="open-source-licenses.html">开源许可</a>
         <a href="mailto:450861294@qq.com">联系我们</a>
         <a href="https://github.com/nestly-young/nestly" target="_blank">GitHub</a>
       </div>
@@ -226,10 +227,14 @@
       <a href="privacy-policy.html">隐私政策</a> |
       <a href="terms-of-service.html">服务条款</a> |
       <a href="subscription-terms.html">订阅条款</a> |
+      <a href="open-source-licenses.html">开源许可</a> |
       <a href="mailto:450861294@qq.com">联系我们</a>
     </p>
-    <p style="margin-top: 15px; font-size: 12px; color: #999;">
-      Last updated: January 1, 2025
+    <p style="margin-top: 15px;">
+      <a href="https://beian.miit.gov.cn/" target="_blank" style="color: #999; text-decoration: underline;">ICP备案号：京ICP备2025135359号-4A</a>
+    </p>
+    <p style="margin-top: 8px; font-size: 12px; color: #999;">
+      Last updated: January 29, 2025
     </p>
   </footer>
 </body>
