--- a/subscription-terms.html
+++ b/subscription-terms.html
@@ -12,7 +12,7 @@
     <h1>放哪了呢（Nestly）订阅服务条款</h1>
     <div class="meta-info">
       <p><strong>生效日期：</strong>2025年1月1日</p>
-      <p><strong>最后更新：</strong>2025年1月1日</p>
+      <p><strong>最后更新：</strong>2025年1月29日</p>
     </div>
   </header>
 
@@ -27,6 +27,17 @@
     <section id="overview">
       <h2>订阅服务概述</h2>
       <p>放哪了呢（Nestly）提供基于订阅的高级服务，本文档详细说明订阅相关的条款和条件。</p>
+
+      <div class="warning-box" style="margin-top: 20px;">
+        <h3>⚠️ 重要说明</h3>
+        <p><strong>关于免费试用：</strong></p>
+        <ul>
+          <li>应用安装后会自动开始7天免费试用期</li>
+          <li>试用期间可完整使用专业版功能</li>
+          <li>试用结束后将<strong>自动转为免费版</strong>，不会扣费</li>
+          <li>如需继续使用专业版功能，需要<strong>主动订阅</strong></li>
+        </ul>
+      </div>
     </section>
 
     <section id="subscription-summary" class="info-box">
@@ -34,9 +45,10 @@
 
       <h3>免费试用（新用户）</h3>
       <ul>
-        <li>✅ 7天完全免费，享受所有专业版功能</li>
-        <li>⏰ 试用期结束前24小时会自动扣费（除非取消）</li>
-        <li>❌ 试用期内取消不会扣费</li>
+        <li>✅ 安装后自动开始7天免费试用</li>
+        <li>✅ 试用期间享受所有专业版功能</li>
+        <li>✅ 试用结束后自动转为免费版</li>
+        <li>❌ 试用结束不会自动扣费，需主动订阅</li>
       </ul>
 
       <h3>如何取消订阅（重要！）</h3>
@@ -73,10 +85,11 @@
       <h3>1. 免费试用</h3>
       <ul>
         <li><strong>试用期限：</strong>7天免费试用期</li>
-        <li><strong>试用条件：</strong>新用户首次订阅享有</li>
+        <li><strong>试用开始：</strong>应用安装后自动开始，无需开启订阅</li>
         <li><strong>试用内容：</strong>完整专业版功能</li>
         <li><strong>设备限制：</strong>每台设备仅可试用一次（基于设备指纹识别IDFV）</li>
-        <li><strong>试用结束：</strong>自动转为免费版，除非选择付费订阅</li>
+        <li><strong>试用结束：</strong>自动转为免费版，不会自动扣费</li>
+        <li><strong>后续订阅：</strong>如需继续使用专业版功能，请主动订阅</li>
       </ul>
 
       <h3>2. 订阅选项</h3>
@@ -102,27 +115,29 @@
     <section id="premium-features">
       <h2>专业版功能</h2>
 
-      <h3>1. 存储升级</h3>
+      <h3>1. 存储和同步</h3>
       <ul>
         <li><strong>物品数量：</strong>无限制存储</li>
         <li><strong>云端同步：</strong>多设备实时同步</li>
-        <li><strong>备份保护：</strong>自动数据备份</li>
+        <li><strong>备份保护：</strong>自动云端数据备份</li>
       </ul>
 
-      <h3>2. 高级功能</h3>
+      <h3>2. AI智能功能</h3>
       <ul>
-        <li><strong>智能搜索：</strong>语义搜索和AI推荐</li>
-        <li><strong>数据导出：</strong>支持JSON等格式</li>
-        <li><strong>高级分析：</strong>使用统计和趋势分析</li>
-        <li><strong>优先支持：</strong>更快的客服响应</li>
+        <li><strong>智能搜索：</strong>语义搜索和AI智能推荐</li>
+        <li><strong>语音识别：</strong>AI语音转文字录入</li>
+        <li><strong>智能分类：</strong>自动物品分类和标签</li>
       </ul>
 
-      <h3>3. 界面增强</h3>
+      <h3>3. 优先服务</h3>
       <ul>
-        <li><strong>无广告体验：</strong>移除所有广告内容（如果有）</li>
-        <li><strong>主题定制：</strong>多种界面主题选择</li>
-        <li><strong>高级组件：</strong>更多UI组件和布局</li>
+        <li><strong>客服支持：</strong>更快的客服响应时间</li>
+        <li><strong>功能优先：</strong>抢先体验新功能</li>
       </ul>
+
+      <div class="info-box" style="margin-top: 20px;">
+        <p><strong>💡 提示：</strong>我们持续开发更多专业版功能，包括数据导出、主题定制等。已订阅用户将自动获得所有新功能。</p>
+      </div>
     </section>
 
     <section id="payment-billing">
@@ -139,7 +154,8 @@
       <ul>
         <li><strong>月订阅：</strong>每月同一日期扣费</li>
         <li><strong>年订阅：</strong>每年同一日期扣费</li>
-        <li><strong>首次计费：</strong>试用期结束后24小时内</li>
+        <li><strong>首次计费：</strong>订阅购买时立即扣费</li>
+        <li><strong>续费时间：</strong>在订阅到期前24小时自动续费</li>
       </ul>
 
       <h3>3. 价格变更</h3>
