--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -12,7 +12,7 @@
     <h1>放哪了呢（Nestly）服务条款</h1>
     <div class="meta-info">
       <p><strong>生效日期：</strong>2025年1月1日</p>
-      <p><strong>最后更新：</strong>2025年1月1日</p>
+      <p><strong>最后更新：</strong>2025年1月29日</p>
     </div>
   </header>
 
@@ -45,11 +45,13 @@
       </ul>
 
       <h3>2. 订阅服务</h3>
-      <p>我们提供免费和付费订阅服务：</p>
+      <p>我们提供免费试用和付费订阅服务：</p>
       <ul>
-        <li><strong>免费试用：</strong>新用户享有7天免费试用期</li>
-        <li><strong>基础功能：</strong>免费用户可使用核心功能（有限制）</li>
-        <li><strong>专业版：</strong>付费用户享有完整功能和高级特性</li>
+        <li><strong>免费试用：</strong>应用安装后自动开始7天免费试用期，无需订阅</li>
+        <li><strong>试用结束：</strong>试用期结束后自动转为免费版，不会自动扣费</li>
+        <li><strong>免费版：</strong>可使用核心功能，但有一定限制（如物品数量限制）</li>
+        <li><strong>专业版：</strong>付费订阅后享有无限存储和所有高级功能</li>
+        <li><strong>主动订阅：</strong>需要主动订阅才会开始付费，不会自动转换</li>
       </ul>
     </section>
 
@@ -105,11 +107,16 @@
     <section id="subscription-payment">
       <h2>订阅和付费</h2>
 
-      <h3>1. 免费试用</h3>
+      <h3>1. 免费试用说明</h3>
+      <div class="info-box">
+        <p><strong>重要：</strong>免费试用与订阅是分开的。</p>
+      </div>
       <ul>
-        <li>新用户享有7天免费试用期</li>
-        <li>试用期内可使用所有专业版功能</li>
-        <li>试用期结束后自动转为免费版（除非订阅）</li>
+        <li><strong>自动开始：</strong>应用安装后自动开始7天免费试用</li>
+        <li><strong>试用内容：</strong>试用期内可使用所有专业版功能</li>
+        <li><strong>试用结束：</strong>试用期结束后自动转为免费版，不会自动订阅或扣费</li>
+        <li><strong>每设备一次：</strong>每台设备（基于IDFV识别）仅可试用一次</li>
+        <li><strong>继续使用：</strong>如需在试用结束后继续使用专业版功能，需要主动购买订阅</li>
       </ul>
 
       <h3>2. 订阅计划</h3>
@@ -119,12 +126,13 @@
         <li>价格可能因地区而异</li>
       </ul>
 
-      <h3>3. 付费条款</h3>
+      <h3>3. 付费和续费条款</h3>
       <ul>
-        <li>通过App Store处理付费</li>
-        <li>订阅自动续费，除非在续费前24小时取消</li>
-        <li>可在设备设置中管理订阅</li>
-        <li>退款政策遵循App Store规定</li>
+        <li><strong>支付方式：</strong>所有付费通过App Store处理，我们不接触您的支付信息</li>
+        <li><strong>即时扣费：</strong>订阅购买时立即扣费，不是试用结束后扣费</li>
+        <li><strong>自动续费：</strong>订阅购买后会自动续费，除非在当前订阅期结束前24小时取消</li>
+        <li><strong>订阅管理：</strong>可在iPhone设置 > Apple ID > 订阅 中管理</li>
+        <li><strong>退款政策：</strong>遵循App Store退款政策</li>
       </ul>
 
       <div class="info-box">
