--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -12,7 +12,7 @@
     <h1>放哪了呢（Nestly）隐私政策</h1>
     <div class="meta-info">
       <p><strong>生效日期：</strong>2025年1月1日</p>
-      <p><strong>最后更新：</strong>2025年1月1日</p>
+      <p><strong>最后更新：</strong>2025年1月29日</p>
     </div>
   </header>
 
@@ -75,7 +75,10 @@
       <ul>
         <li><strong>相机权限：</strong>用于拍摄物品照片，所有照片仅存储在您的设备和云端账户中</li>
         <li><strong>照片库访问：</strong>用于选择现有照片作为物品图片</li>
-        <li><strong>数据处理：</strong>照片会被压缩后上传到云端（如果开启同步），仅供您自己访问</li>
+        <li><strong>图片存储服务：</strong>阿里云对象存储OSS（Object Storage Service）</li>
+        <li><strong>数据处理：</strong>照片会被压缩后上传到阿里云OSS（如果开启云端同步），仅供您自己访问</li>
+        <li><strong>存储位置：</strong>中国大陆华北区域</li>
+        <li><strong>访问控制：</strong>照片URL包含安全签名，仅您本人可访问</li>
         <li><strong>第三方访问：</strong>我们不会与第三方共享您的照片</li>
         <li><strong>权限控制：</strong>您可以随时在系统设置中撤销权限，但会影响图片相关功能</li>
       </ul>
@@ -95,13 +98,20 @@
         <li><strong>隐私政策：</strong><a href="https://help.aliyun.com/document_detail/163482.html" target="_blank">阿里云隐私权政策</a></li>
       </ul>
 
-      <h3>2. 云端数据同步</h3>
+      <h3>2. 云端数据同步和存储</h3>
       <ul>
-        <li><strong>服务提供商：</strong>阿里云（RDS PostgreSQL）</li>
+        <li><strong>数据库服务：</strong>阿里云RDS PostgreSQL</li>
         <li><strong>用途：</strong>存储您的物品数据并实现跨设备同步</li>
         <li><strong>数据加密：</strong>传输使用TLS加密，存储使用AES-256加密</li>
         <li><strong>服务器位置：</strong>中国大陆华北区域</li>
         <li><strong>数据备份：</strong>自动每日备份，保留7天</li>
+      </ul>
+
+      <ul>
+        <li><strong>图片存储服务：</strong>阿里云对象存储OSS</li>
+        <li><strong>用途：</strong>存储和同步物品照片</li>
+        <li><strong>访问控制：</strong>使用签名URL，确保只有您可以访问照片</li>
+        <li><strong>服务器位置：</strong>中国大陆华北区域</li>
       </ul>
 
       <h3>3. 订阅管理服务</h3>
@@ -154,12 +164,15 @@
       <p>我们绝不会将您的个人信息出售给第三方。</p>
 
       <h3>有限的第三方服务</h3>
+      <p>我们仅与以下必要的第三方服务提供商共享数据，用于提供核心功能：</p>
       <ul>
-        <li><strong>云存储服务：</strong>阿里云RDS，用于数据同步（数据经过加密）</li>
-        <li><strong>AI处理服务：</strong>阿里云DashScope，用于语音识别和智能解析</li>
-        <li><strong>订阅管理：</strong>RevenueCat，用于管理订阅状态（匿名数据）</li>
-        <li><strong>支付处理：</strong>App Store处理订阅付款</li>
+        <li><strong>数据库存储：</strong>阿里云RDS PostgreSQL，用于存储物品数据并实现多设备同步（数据经过加密）</li>
+        <li><strong>图片存储：</strong>阿里云OSS对象存储，用于存储物品照片（使用签名URL访问控制）</li>
+        <li><strong>AI处理服务：</strong>阿里云DashScope，用于语音识别和智能文本解析</li>
+        <li><strong>订阅管理：</strong>RevenueCat，用于管理订阅状态（仅传输匿名设备标识符）</li>
+        <li><strong>支付处理：</strong>App Store处理订阅付款（我们不接触支付信息）</li>
       </ul>
+      <p><strong>数据最小化原则：</strong>我们仅向第三方服务传输提供功能所必需的最少数据。</p>
 
       <h3>法律要求</h3>
       <p>在以下情况下，我们可能需要披露信息：</p>
@@ -232,7 +245,13 @@
       </ul>
 
       <h3>4. 数据可携权</h3>
-      <p>您可以请求以JSON格式导出您的数据（设置 > 数据管理 > 导出数据）。</p>
+      <p>您可以通过以下方式请求导出您的数据：</p>
+      <ul>
+        <li>发送邮件到 <a href="mailto:450861294@qq.com">450861294@qq.com</a>，标题注明"数据导出请求"</li>
+        <li>我们将在10个工作日内提供JSON格式的数据文件</li>
+        <li>导出的数据包括所有物品信息、图片链接和相关元数据</li>
+      </ul>
+      <p class="info-box" style="margin-top: 10px;"><strong>注意：</strong>数据导出功能正在开发中，未来将在应用内提供自助导出选项。</p>
 
       <h3>5. 撤回同意</h3>
       <p>您可以随时撤回对数据处理的同意。</p>
@@ -283,7 +302,8 @@
       <h3>家长监护</h3>
       <ul>
         <li>13-18岁未成年人使用需获得家长或监护人同意</li>
-        <li>家长可通过应用内"家庭管理"功能监督未成年人使用</li>
+        <li>建议家长通过iOS系统的"屏幕使用时间"功能监督未成年人使用</li>
+        <li>家长可设置应用使用时长限制和内容访问限制</li>
       </ul>
 
       <h3>发现未成年用户的处理</h3>
