--- a/open-source-licenses.html
+++ b/open-source-licenses.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="放哪了呢（Nestly） - 开源许可">
-  <title>开源许可 - 放哪了呢（Nestly）</title>
+  <meta name="description" content="放哪儿呢（Nestly） - 开源许可">
+  <title>开源许可 - 放哪儿呢（Nestly）</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
 
   <main>
     <section class="intro">
-      <p>放哪了呢（Nestly）使用了以下开源软件和库。我们对这些项目的贡献者表示衷心的感谢。</p>
+      <p>放哪儿呢（Nestly）使用了以下开源软件和库。我们对这些项目的贡献者表示衷心的感谢。</p>
     </section>
 
     <section>
@@ -241,7 +241,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 放哪了呢（Nestly） by nestly-young. All rights reserved.</p>
+    <p>&copy; 2025 放哪儿呢（Nestly） by nestly-young. All rights reserved.</p>
     <p>
       <a href="privacy-policy.html">隐私政策</a> |
       <a href="terms-of-service.html">服务条款</a> |
