--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="放哪了呢（Nestly）服务条款 - 使用放哪了呢应用的规则和条件">
-  <title>服务条款 - 放哪了呢（Nestly）</title>
+  <meta name="description" content="放哪儿呢（Nestly）服务条款 - 使用放哪儿呢应用的规则和条件">
+  <title>服务条款 - 放哪儿呢（Nestly）</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
-    <h1>放哪了呢（Nestly）服务条款</h1>
+    <h1>放哪儿呢（Nestly）服务条款</h1>
     <div class="meta-info">
       <p><strong>生效日期：</strong>2025年1月1日</p>
       <p><strong>最后更新：</strong>2025年1月29日</p>
@@ -26,8 +26,8 @@
   <main>
     <section id="acceptance">
       <h2>接受条款</h2>
-      <p>欢迎使用放哪了呢（Nestly）！通过下载、安装或使用我们的应用，您同意受本服务条款（"条款"）的约束。如果您不同意这些条款，请不要使用我们的服务。</p>
-      <p><strong>应用名称：</strong>放哪了呢（Nestly）</p>
+      <p>欢迎使用放哪儿呢（Nestly）！通过下载、安装或使用我们的应用，您同意受本服务条款（"条款"）的约束。如果您不同意这些条款，请不要使用我们的服务。</p>
+      <p><strong>应用名称：</strong>放哪儿呢（Nestly）</p>
       <p><strong>开发者：</strong>nestly-young（个人开发者）</p>
     </section>
 
@@ -374,12 +374,12 @@
     </section>
 
     <div class="success-box">
-      <p>感谢您选择放哪了呢（Nestly）！我们致力于为您提供优质的物品管理服务。</p>
+      <p>感谢您选择放哪儿呢（Nestly）！我们致力于为您提供优质的物品管理服务。</p>
     </div>
   </main>
 
   <footer>
-    <p>&copy; 2025 放哪了呢（Nestly） by nestly-young. All rights reserved.</p>
+    <p>&copy; 2025 放哪儿呢（Nestly） by nestly-young. All rights reserved.</p>
     <p><a href="index.html">返回首页</a> | <a href="mailto:450861294@qq.com">联系我们</a></p>
   </footer>
 </body>
